--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -9,6 +9,9 @@
         <div class="col-md-12">
           <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
         </div>
+        <div class="col-md-12">
+          Sample message
+        </div>      
     </div>
 
   </body>
