--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -12,7 +12,9 @@
         <div class="col-md-12">
         </div>      
     </div>
-
+    <ol>
+      <li>Trigger #1</li>
+    </ol>
   </body>
 
 </html>
