--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -12,8 +12,10 @@
         <div class="col-md-12">
         </div>      
     </div>
+    <hr/>
     <ol>
       <li>Trigger #1</li>
+      <li>Trigger #2</li>
     </ol>
   </body>
 
