--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -17,6 +17,7 @@
       <li>Trigger #1</li>
       <li>Trigger #2</li>
       <li>Trigger #3</li>
+      <li>Trigger #4</li>
     </ol>
   </body>
 
